--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Notebook</title>
+    <title>SteamID</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Online Notebook</h1>
-    <textarea id="notebook" placeholder="Write your notes here..."></textarea>
+    <h1>📋 Список steam ID</h1>
+    <div class="controls">
+        <span id="counter">ID в списке: 0</span>
+    </div>
+    <textarea id="notebook" placeholder="Список steam ID..."></textarea>
     <script src="script.js"></script>
 </body>
 </html> 
